--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,11 +20,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build Binary
-        run: env GOOS=darwin GOARCH=amd64 go build -o gotcher .
+        run: env GOOS=darwin GOARCH=amd64 go build -o rigo .
 
       - name: Release with Notes
         uses: softprops/action-gh-release@v1
         with:
-          files: ./gotcher
+          files: ./rigo
         env:
           GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
