--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,12 +19,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build Binary
-        run: env GOOS=darwin GOARCH=amd64 go build -o rigo .
+      # - name: Build Binary
+      #   run: env GOOS=darwin GOARCH=amd64 go build -o rigo .
 
-      - name: Release with Notes
-        uses: softprops/action-gh-release@v1
-        with:
-          files: ./rigo
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+      # - name: Release with Notes
+      #   uses: softprops/action-gh-release@v1
+      #   with:
+      #     files: ./dist
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
